# diy_genetics

./: .gitignore  CLAUDE.md  README.md  diy-dna-sequencing-guide.md  run_pipeline.sh
app/: README.md  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
config/: local.conf.example  pipeline.conf
env/: bootstrap-lxc.sh  environment.yml  provision-lxc.example.sh
env/wsl/: bootstrap-wsl.sh  setup-wsl.ps1
scripts/: 00_download_references.sh  01_align.sh  02_refine.sh  03_call_variants.sh  03g_parabricks_germline.sh  04_annotate_health.sh  05_ancestry.sh  06_export_23andme.sh  ancestry_proportions.py  fetch_inheritance_map.py  hereditary_conditions.py  lib.sh
webui/: app.py  run-webui.sh
webui/static/: crashcourse.html  guide.html  index.html
