[package]
name = "diy-genetics"
version = "0.1.0"
description = "DIY Genetics — native desktop control panel over a WSL2 pipeline backend"
edition = "2021"
rust-version = "1.77"

[lib]
name = "diy_genetics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
